# linear-beaglebra

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  matrix4x4.rs  sqrt_trait.rs  vector2.rs  vector3.rs
